- Added LANGUAGE env variable - Fixed punctuation not working when diarization was disabled - Fixed Return format is now dependant of the request header. - Added min duration for audio splitting - Updated OpenAPI - Minor tweaks
